smbios: add Type 16, 17 and 19
Signed-off-by: Raymond Mao <raymond.mao@linaro.org>

--- a/arch/arm/dts/smbios_generic.dtsi
+++ b/arch/arm/dts/smbios_generic.dtsi
@@ -80,6 +80,15 @@
 
 			system-slot {
 			};
+
+			memory-array {
+			};
+
+			memory-device {
+			};
+
+			memory-array-mapped-address {
+			};
 		};
 	};
 };
